@@ -24,5 +24,7 @@ CHANGES SINCE 2.2
 
 11. New: parameterized (generic) types can now be extended as types and subtypes or passed as parameters to user subprograms
 
-12. Change: record declarations may end with "end <type-name>" instead of "end record", but only if pragma ada_95 is not used. [tests needed]
+12. New: parameterized (generic) types can now be defined as types and subtypes.  These types and subtypes can be passed as parameters to user subprograms.  Types extending resource types must be limited.
+
+13. Change: record declarations may end with "end <type-name>" instead of "end record", but only if pragma ada_95 is not used. [tests needed]
 
